# check-cratesio

./: .env  Cargo.toml  clean-crate.sh
migrations/2024-03-06-054334_create_posts/: down.sql  up.sql
src/: crate_info.rs  lib.rs  models.rs  schema.rs
